# hmf

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
hmf/: __about__.py  __init__.py  _main.py
hmf/_cli/: __init__.py  common.py  compress.py  convert.py  info.py  uncompress.py
scripts/: paraview-hmf-plugin.py  paraview-tmf-plugin.py
test/: test_hmf.py  test_tmf.py
tmf/: __about__.py  __init__.py  _main.py  main.py
tmf/_cli/: common.py  compress.py  convert.py  info.py  uncompress.py
tools/: paraview-hmf-plugin.py
