[metadata]
name = hmftools
version = 0.0.3
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Hierarchical Mesh Format
url = https://github.com/nschloe/hmf
project_urls =
    Code=https://github.com/nschloe/hmf
    Issues=https://github.com/nschloe/hmf/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    mesh
    file formats
    scientific
    engineering

[options]
packages = find:
install_requires =
    h5py
    importlib_metadata;python_version<"3.8"
    numpy
python_requires = >=3.6

[options.entry_points]
console_scripts =
    hmf-info = hmf._cli:info
    hmf-show = hmf._cli:show
    hmf-convert = hmf._cli:convert
    hmf-compress = hmf._cli:compress
    hmf-uncompress = hmf._cli:uncompress

[options.data_files]
share/paraview-5.8/plugins =
    tools/paraview-hmf-plugin.py
